--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -580,7 +580,10 @@ body {
 }
 
 
-
+.About-Me-Wrapper  p {
+    font-size: 0.9rem;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 
 
 .about-me-content-bio {
@@ -701,7 +704,7 @@ body {
     width: 100%;
     overflow: hidden;
     background-color:var(--black);
-    height: 900px;
+    height: 901px;
     animation-name:techContainer;
     animation-delay:0s;
     animation-duration:4s;
@@ -766,12 +769,20 @@ body {
 .Tech-Skills-Wrapper {
     display: flex;
     align-items:center;
-    justify-content: center;
+    justify-content: space-around;
+    height: 510px;
     margin:0 auto;
-    max-width: 550px;
-    margin-left: 90px;
+    max-width: 2000px;
+   
 }
 
+
+.Tech-Skills-Wrapper p {
+    width: 710px;
+    text-align: center;
+    font-size: 0.9rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
 
 .tech-skills-content {
     color:var(--white);
@@ -785,10 +796,9 @@ body {
     justify-content: center;
     margin:0 auto;
     max-width: 800px;
-    height: 110px;
     position: relative;
-    top:90px;
-    left: 280px;
+    top:-31px;
+    left: 80px;
 }
 
 
@@ -796,44 +806,30 @@ body {
 
 
 .image-language img {
-    width: 125px;
+    width: 101px;
     object-fit: contain;
     margin:0px 31px;
     mix-blend-mode: normal;
 }
 
 
-.Tech-Skills-Wrapper {
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    margin:0 auto;
-    max-width: 550px;
-    text-align: center;
-    position: relative;
-    top:0px;
-    right: 409px;
-}
 
 
 
 
 .know-text {
     color:var(--white);
-    width: 490px;
+    text-align: center;
 }
 
 
 .know-text h3 {
     font-family: "Antic Didone", serif;
     font-weight: 400;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
 }
 
 
-.know-text p {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-}
 
 
 
