--- a/src/pages/CSS/ShoeStore.css
+++ b/src/pages/CSS/ShoeStore.css
@@ -32,3 +32,29 @@
     width: 610px;
     object-fit: contain;
 }
+
+
+
+
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+    cursor: zoom-out;
+  }
+  
+  .modal-content img {
+    max-width: 90%;
+    max-height: 90%;
+    border-radius: 8px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+    cursor: default;
+  }
