--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -183,6 +183,9 @@ body {
 
 
 
+
+
+
 /* Wrapper for the header content */
 .Header-Wrapper {
     display: flex;
@@ -229,6 +232,10 @@ body {
     border-radius: 60%;
 }
 
+
+
+
+
 /* Header links wrapper */
 .header-links-wrapper {
     display: flex;
@@ -263,6 +270,37 @@ body {
 
 
 
+
+.header-links-wrapper button.qa-resume {
+    border: none;
+    outline: none;
+    background: purple;
+    color: white;
+    font-size: 1rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    cursor: pointer;
+    padding: 0.9em 2em;
+    text-align: center;
+}
+
+.header-links-wrapper button.qa-resume:hover {
+    background: greenyellow;
+}
+
+
+
+
+
+
+.reference-quote p {
+    color:whitesmoke;
+    font-style: italic;
+    font-size: 1rem;
+}
+
+
+
+
 .header-links-wrapper button.cl {
     border: none;
     outline: none;
@@ -276,6 +314,26 @@ body {
 }
 
 .header-links-wrapper button.cl:hover {
+    background: greenyellow;
+
+}
+
+
+
+
+.header-links-wrapper button.letter {
+    border: none;
+    outline: none;
+    background: royalblue;
+    color: white;
+    font-size: 1rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    cursor: pointer;
+    padding: 0.9em 2em;
+    text-align: center;
+}
+
+.header-links-wrapper button.letter:hover {
     background: greenyellow;
 
 }
@@ -971,7 +1029,7 @@ body {
     width: 100%;
     overflow: hidden;
     background:black;
-    height:auto;
+    height:6500px;
     animation: fade-in 4s ease-in-out;
     
 }
@@ -997,7 +1055,7 @@ body {
 
 
 .Showcase-Wrapper h3 {
-    color:green;
+    color:whitesmoke;
     font-size: 1.9rem;
     font-family: "Antic Didone", serif;
     font-weight: 400;  
@@ -1091,7 +1149,7 @@ font-size: 1.3rem;
     
     
     
-    .Experience-Wrapper .work-link {
+   .work-link {
     cursor: pointer;
     color:greenyellow;
     font-weight: bold;
@@ -1134,11 +1192,12 @@ font-size: 1.3rem;
 
 
 
-
-
-
-
-
+.diff-links {
+    display: flex;
+    flex-direction: column;
+    margin:0 auto;
+    gap:31px
+}
 
 
 
@@ -1183,7 +1242,7 @@ font-size: 1.3rem;
     width: 100%;
     overflow: hidden;
     background: green;
-    height:710px;
+    height:1300px;
     margin-top: 10px;
 }
 
@@ -1214,6 +1273,8 @@ font-size: 1.3rem;
 
 .qa-wrapper-two {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     margin: 0 auto;
